# goarch-bulletin-builder

./: .gitignore  LICENSE.txt  README.md  build_path.typ  bulletin.typ  bulletin_back.typ  classes.py  cli.py  digital_chant_stand.py  get_dismissal_hymns.py  get_scripture_reading.py  goarch_xml_feed.py  main.py  manual_entry_template.py  notes.md  pyproject.toml  utils.py
data/: table-of-contents.txt
